# RollCall

./: CMakeLists.txt  README.md  file.cpp  file.h  main.cpp  main.qml
Resources/: MyButton.qml  Resource.qrc  ThemeManager.qml  qmldir
Resources/Themes/: Dark.qml  Light.qml  ThemeBase.qml
qml/: CustomMenu.qml  CustomMenuBar.qml  Settings.qml  test3.qml
